Optimize imports and collectors